--- a/pixelsort/Cargo.toml
+++ b/pixelsort/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.21.3"
+egui = "0.21.0"
 image = "0.24.6"
+tracing-subscriber = "0.3.17"
